--- a/front/signUp/style.css
+++ b/front/signUp/style.css
@@ -143,6 +143,6 @@
         margin-top: 30px;
         display: flex;
         align-items: center;
-        justify-content: center;
+        justify-content: centerч;
     }
 }
