--- a/front/style.css
+++ b/front/style.css
@@ -149,12 +149,6 @@
                     color: #FF8A00;
                     font-family: "Poppins-SemiBold";
                     font-size: 1.5625rem;
-                    &:hover{
-                        color: #fff;
-                        cursor: pointer;
-                        transition: all .4s ease;
-                    }
-                }
                 }
                 .group{
                     display: flex;
@@ -163,12 +157,7 @@
                     span{
                         font-family: "Poppins-Regular";
                         color: #E3E2E0;
-                        font-size: 1.25rem;
-                        &:hover{
-                            color: #FF8A00;
-                            cursor: pointer;
-                            transition: all .4s ease;
-                        }
+                        font-size: 1.25rem
                     }
                 }
             }
