--- a/front/reservation/style.css
+++ b/front/reservation/style.css
@@ -106,3 +106,14 @@
         }
     }
 }
+
+.active{
+    display: flex !important;
+}
+
+
+.modalFirstResv{
+    display: none;
+    max-width: 1112px;
+    background-color: #FFFFFF;
+}
