--- a/front/reservation/style.css
+++ b/front/reservation/style.css
@@ -286,3 +286,173 @@
         }
     }
 }
+
+.agreements{
+    display: flex;
+    gap: 40px;
+    padding-top: 60px;
+    align-items: center;
+    .groupAgree{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        gap: 30px;
+        .item{
+            display: flex;
+            align-items: center;
+            gap: 20px;
+            input {
+                outline: none;
+                border: 1px solid #311F09;
+                min-width: 44px;
+                min-height: 44px;
+                border-radius: 100px;
+                -webkit-appearance: none;
+                outline: none;
+                cursor: pointer;
+            }
+            span{
+               color: #5C4529;
+               font-family: "Poppins-Regular";
+               font-size: 1.25rem;
+               
+            }
+        }
+        .confirmBtn{
+            font-family: "Poppins-Regular";
+            color: #FFFFFF;
+            font-size: 1.5625rem;
+            padding: 36px 115px;
+            background-color: #FF8A00;
+            border-radius: 20px;
+            line-height: 110%;
+            display: flex;
+            text-wrap: nowrap;
+            margin-top: 40px;
+        }
+    }
+
+    .infoRest{
+        display: flex;
+        flex-direction: column;
+        width: 50%;
+        .title{
+            font-size: 1.5625rem;
+            color: #000;
+            font-family: "Poppins-SemiBold";
+            padding-bottom: 40px;
+        }
+        span{
+            font-size: 1.25rem;
+            color: #5C4529;
+            font-family: "Poppins-Regular";
+            &:nth-child(2){
+                display: block;
+                padding-bottom: 23px;
+            }
+        }
+    }
+}
+
+.modalSecondResv{
+    display: none;
+    &::after{
+        content: " ";
+        background-color: #311F09;
+        opacity: 80%;
+        position: absolute;
+        width: 200%;
+        height: 200%;
+        top: 0;
+        bottom: 0;
+        left: -470px;
+        z-index: 1;
+    }
+    .group{
+        max-width: 1112px;
+        background-color: #FFFFFF;
+        position: absolute;
+        top: 0%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+        z-index: 2;
+        padding: 60px 0;
+        width: 100%;
+        .head{
+            display: flex;
+            justify-content: space-between;
+            padding: 0 60px;
+            .groupBtn{
+                display: flex;
+                gap: 15px;
+                .span:nth-child(1){
+                    padding: 14px 32px;
+                    background-color: #FF8A00;
+                    border-radius: 133px;
+                    color: #fff;
+                    font-family: 'Poppins-SemiBold';
+                    font-size: 0.875rem;
+                    transition: all .4s ease;
+                    &:hover{
+                        box-shadow: 0px 0px 15px #FF8A00;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+                .span:nth-child(2){
+                    padding: 14px 32px;
+                    background-color: #3FA72F;
+                    border-radius: 133px;
+                    color: #fff;
+                    font-family: 'Poppins-SemiBold';
+                    font-size: 0.875rem;
+                    transition: all .4s ease;
+                    &:hover{
+                        box-shadow: 0px 0px 15px #3FA72F;
+                        cursor: pointer;
+                        transition: all .4s ease;
+                    }
+                }
+            }
+        }
+        .detail{
+            display: flex;
+            flex-direction: column;
+            padding-top: 94px;
+            position: relative;
+            .imagge{
+                position: absolute;
+                max-width: 1112px;
+                padding-top: 15px;
+                z-index: -1;
+                top: 80px;
+                img{
+                    width: 100%;
+                }
+            }
+
+            .title{
+                font-size: 2.5rem;
+                font-family: 'Poppins-SemiBold';
+                color: #ffffff;
+                padding: 34px 60px 0px 60px;
+            }
+            .groupDetail{
+                padding: 28px 60px 34px 60px;
+                display: flex;
+                flex-direction: column;
+                gap: 12px;
+                .item{
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    span{
+                        color: #ffffff;
+                        font-size: 1.25rem;
+                        font-family: "Poppins-Regular";
+                    }
+                }
+            }
+        }
+    }
+}
